# flow_creator

./: GEMINI.md  README.md  pyproject.toml
skills/beginner-guide-style/: SKILLS.md
skills/grounded-citation-answering/: SKILLS.md
skills/source-extraction-fidelity/: SKILLS.md
src/flow_defining/: main.py  state.py  utils.py
src/flow_defining/crews/enrichment_crew/: enrichment_crew.py
src/flow_defining/crews/enrichment_crew/config/: agents.yaml  tasks.yaml
src/flow_defining/crews/qa_crew/: qa_crew.py
src/flow_defining/crews/qa_crew/config/: agents.yaml  tasks.yaml
src/flow_defining/crews/research_crew/: research_crew.py
src/flow_defining/crews/research_crew/config/: agents.yaml  tasks.yaml
src/flow_defining/crews/writing_crew/: writing_crew.py
src/flow_defining/crews/writing_crew/config/: agents.yaml  tasks.yaml
