[project]
name = "flow_defining"
version = "0.1.0"
description = "flow-defining using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.15.1,<2.0.0",
    "selenium>=4.45.0",
    "webdriver-manager>=4.1.2"
]

[project.scripts]
kickoff = "flow_defining.main:kickoff"
run_crew = "flow_defining.main:kickoff"
plot = "flow_defining.main:plot"
run_with_trigger = "flow_defining.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
